feat: Implement get-maintenances-by-status endpoint
